// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TSC: es6/destructuring arrayAssignmentPatternWithAny 1`] = `
"var a;
var x;
[x] = a;
"
`;

exports[`TSC: es6/destructuring declarationInAmbientContext 1`] = `
"// Error, destructuring declaration not allowed in ambient context
// Error, destructuring declaration not allowed in ambient context
"
`;

exports[`TSC: es6/destructuring declarationsAndAssignments 1`] = `
"function f0() {
	var [] = [1, "hello"];
	var [x] = [1, "hello"];
	var [x, y] = [1, "hello"];
	var [x, y, z] = [1, "hello"];
	var [, , x] = [0, 1, 2];
	var x;
	var y;
}
function f1() {
	var a = [1, "hello"];
	var [x] = a;
	var [x, y] = a;
	var [x, y, z] = a;
	var x;
	var y;
	var z;
}
function f2() {
	var {} = { x: 5, y: "hello" };
	// Ok, empty binding pattern means nothing
var { x:x } = { x: 5, y: "hello" };
	// Error, no y in target
var { y:y } = { x: 5, y: "hello" };
	// Error, no x in target
var { x:x, y:y } = { x: 5, y: "hello" };
	var x;
	var y;
	var { x:a } = { x: 5, y: "hello" };
	// Error, no y in target
var { y:b } = { x: 5, y: "hello" };
	// Error, no x in target
var { x:a, y:b } = { x: 5, y: "hello" };
	var a;
	var b;
}
function f3() {
	var [x, [y, [z]]] = [1, ["hello", [true]]];
	var x;
	var y;
	var z;
}
function f4() {
	var { a:x, b:{ a:y, b:{ a:z } } } = { a: 1, b: { a: "hello", b: { a: true } } };
	var x;
	var y;
	var z;
}
function f6() {
	var [x=0, y=""] = [1, "hello"];
	var x;
	var y;
}
function f7() {
	var [x=0, y=1] = [1, "hello"];
	// Error, initializer for y must be string
var x;
	var y;
}
function f8() {
	var [a, b, c] = [];
	// Error, [] is an empty tuple
var [d, e, f] = [1];
}
// Error, [1] is a tuple
function f9() {
	var [a, b] = {};
	// Error, not array type
var [c, d] = { 0: 10, 1: 20 };
	// Error, not array type
var [e, f] = [10, 20];
}
function f10() {
	var { a:a, b:b } = {};
	// Error
var { a:a, b:b } = [];
}
// Error
function f11() {
	var { x:a, y:b } = { x: 10, y: "hello" };
	var { 0:a, 1:b } = { 0: 10, 1: "hello" };
	var { "<":a, ">":b } = { "<": 10, ">": "hello" };
	var { 0:a, 1:b } = [10, "hello"];
	var a;
	var b;
}
function f12() {
	var [a, [b, { x:x, y:c }]=["abc", { x: 10, y: false }]] = [1, ["hello", { x: 5, y: true }]];
	var a;
	var b;
	var x;
	var c;
}
function f13() {
	var [x, y] = [1, "hello"];
	var [a, b] = [[x, y], { x: x, y: y }];
}
function f14([a=1, [b="hello", { x:x, y:c=false }]]) {
	var a;
	var b;
	var c;
}
f14([2, ["abc", { x: 0, y: true }]]);
f14([2, ["abc", { x: 0 }]]);
f14([2, ["abc", { y: false }]]);
// Error, no x
var M;((M) => {var [a, b] = [1, 2];M.a=a;M.b=b;})(M || (M = {}));
function f15() {
	var a = "hello";
	var b = 1;
	var c = true;
	return { a, b, c };
}
function f16() {
	var { a:a, b:b, c:c } = f15();
}
function f17({ a:a="", b:b=0, c:c=false }) {
}
f17({});
f17({ a: "hello" });
f17({ c: true });
f17(f15());
function f18() {
	var a;
	var b;
	var aa;
	({ a, b } = { a, b });
	({ a, b } = { b, a });
	[aa[0], b] = [a, b];
	[a, b] = [b, a];
	// Error
[a=1, b="abc"] = [2, "def"];
}
function f19() {
	var a,b;
	[a, b] = [1, 2];
	[a, b] = [b, a];
	({ a, b } = { b, a });
	[[a, b]=[1, 2]] = [[2, 3]];
	var x = ([a, b] = [1, 2]);
}
function f20(v) {
	var x;
	var y;
	var z;
	var a0;
	var a1;
	var a2;
	var a3;
	var [...a3] = v;
	var [x, ...a2] = v;
	var [x, y, ...a1] = v;
	var [x, y, z, ...a0] = v;
	[...a3] = v;
	[x, ...a2] = v;
	[x, y, ...a1] = v;
	[x, y, z, ...a0] = v;
}
function f21(v) {
	var x;
	var y;
	var z;
	var a0;
	var a1;
	var a2;
	var a3;
	var [...a0] = v;
	var [x, ...a1] = v;
	var [x, y, ...a2] = v;
	var [x, y, z, ...a3] = v;
	[...a0] = v;
	[x, ...a1] = v;
	[x, y, ...a2] = v;
	[x, y, z, ...a3] = v;
}
"
`;

exports[`TSC: es6/destructuring declarationWithNoInitializer 1`] = `
"var [a, b];
// Error, no initializer
var { c:c, d:d };
// Error, no initializer
"
`;

exports[`TSC: es6/destructuring destructuringArrayBindingPatternAndAssignment1ES5 1`] = `
"// @target: es2015
/* AssignmentPattern:
 *      ObjectAssignmentPattern
 *      ArrayAssignmentPattern
 * ArrayAssignmentPattern:
 *      [Elision<opt>   AssignmentRestElementopt   ]
 *      [AssignmentElementList]
 *      [AssignmentElementList, Elision<opt>   AssignmentRestElementopt   ]
 * AssignmentElementList:
 *      Elision<opt>   AssignmentElement
 *      AssignmentElementList, Elisionopt   AssignmentElement
 * AssignmentElement:
 *      LeftHandSideExpression   Initialiseropt
 *      AssignmentPattern   Initialiseropt
 * AssignmentRestElement:
 *      ...   LeftHandSideExpression
 */
// In a destructuring assignment expression, the type of the expression on the right must be assignable to the assignment target on the left.
// An expression of type S is considered assignable to an assignment target V if one of the following is true
// V is an array assignment pattern, S is the type Any or an array-like type (section 3.3.2), and, for each assignment element E in V,
//      S is the type Any, or
var [a0, a1] = undefined;
var [a2=false, a3=1] = undefined;
// V is an array assignment pattern, S is the type Any or an array-like type (section 3.3.2), and, for each assignment element E in V,
//      S is a tuple- like type (section 3.3.3) with a property named N of a type that is assignable to the target given in E,
//        where N is the numeric index of E in the array assignment pattern, or
var [b0, b1, b2] = [2, 3, 4];
var [b3, b4, b5] = [1, 2, "string"];
function foo() {
	return [1, 2, 3];
}
var [b6, b7] = foo();
var [...b8] = foo();
//      S is not a tuple- like type and the numeric index signature type of S is assignable to the target given in E.
var temp = [1, 2, 3];
var [c0, c1] = [...temp];
var [c2] = [];
var [[[c3]], [[[[c4]]]]] = [[[]], [[[[]]]]];
var [[c5], c6] = [[1], true];
var [, c7] = [1, 2, 3];
var [, , , c8] = [1, 2, 3, 4];
var [, , , c9] = [1, 2, 3, 4];
var [, , , ...c10] = [1, 2, 3, 4, "hello"];
var [c11, c12, ...c13] = [1, 2, "string"];
var [c14, c15, c16] = [1, 2, "string"];
"
`;

exports[`TSC: es6/destructuring destructuringArrayBindingPatternAndAssignment1ES5iterable 1`] = `
"// @target: es2015
/* AssignmentPattern:
 *      ObjectAssignmentPattern
 *      ArrayAssignmentPattern
 * ArrayAssignmentPattern:
 *      [Elision<opt>   AssignmentRestElementopt   ]
 *      [AssignmentElementList]
 *      [AssignmentElementList, Elision<opt>   AssignmentRestElementopt   ]
 * AssignmentElementList:
 *      Elision<opt>   AssignmentElement
 *      AssignmentElementList, Elisionopt   AssignmentElement
 * AssignmentElement:
 *      LeftHandSideExpression   Initialiseropt
 *      AssignmentPattern   Initialiseropt
 * AssignmentRestElement:
 *      ...   LeftHandSideExpression
 */
// In a destructuring assignment expression, the type of the expression on the right must be assignable to the assignment target on the left.
// An expression of type S is considered assignable to an assignment target V if one of the following is true
// V is an array assignment pattern, S is the type Any or an array-like type (section 3.3.2), and, for each assignment element E in V,
//      S is the type Any, or
var [a0, a1] = undefined;
var [a2=false, a3=1] = undefined;
// V is an array assignment pattern, S is the type Any or an array-like type (section 3.3.2), and, for each assignment element E in V,
//      S is a tuple- like type (section 3.3.3) with a property named N of a type that is assignable to the target given in E,
//        where N is the numeric index of E in the array assignment pattern, or
var [b0, b1, b2] = [2, 3, 4];
var [b3, b4, b5] = [1, 2, "string"];
function foo() {
	return [1, 2, 3];
}
var [b6, b7] = foo();
var [...b8] = foo();
//      S is not a tuple- like type and the numeric index signature type of S is assignable to the target given in E.
var temp = [1, 2, 3];
var [c0, c1] = [...temp];
var [c2] = [];
var [[[c3]], [[[[c4]]]]] = [[[]], [[[[]]]]];
var [[c5], c6] = [[1], true];
var [, c7] = [1, 2, 3];
var [, , , c8] = [1, 2, 3, 4];
var [, , , c9] = [1, 2, 3, 4];
var [, , , ...c10] = [1, 2, 3, 4, "hello"];
var [c11, c12, ...c13] = [1, 2, "string"];
var [c14, c15, c16] = [1, 2, "string"];
"
`;

exports[`TSC: es6/destructuring destructuringArrayBindingPatternAndAssignment1ES6 1`] = `
"// @target: es6
/* AssignmentPattern:
 *      ObjectAssignmentPattern
 *      ArrayAssignmentPattern
 * ArrayAssignmentPattern:
 *      [Elision<opt>   AssignmentRestElementopt   ]
 *      [AssignmentElementList]
 *      [AssignmentElementList, Elision<opt>   AssignmentRestElementopt   ]
 * AssignmentElementList:
 *      Elision<opt>   AssignmentElement
 *      AssignmentElementList, Elisionopt   AssignmentElement
 * AssignmentElement:
 *      LeftHandSideExpression   Initialiseropt
 *      AssignmentPattern   Initialiseropt
 * AssignmentRestElement:
 *      ...   LeftHandSideExpression
 */
// In a destructuring assignment expression, the type of the expression on the right must be assignable to the assignment target on the left.
// An expression of type S is considered assignable to an assignment target V if one of the following is true
// V is an array assignment pattern, S is the type Any or an array-like type (section 3.3.2), and, for each assignment element E in V,
//      S is the type Any, or
var [a0, a1] = undefined;
var [a2=false, a3=1] = undefined;
// V is an array assignment pattern, S is the type Any or an array-like type (section 3.3.2), and, for each assignment element E in V,
//      S is a tuple- like type (section 3.3.3) with a property named N of a type that is assignable to the target given in E,
//        where N is the numeric index of E in the array assignment pattern, or
var [b0, b1, b2] = [2, 3, 4];
var [b3, b4, b5] = [1, 2, "string"];
function foo() {
	return [1, 2, 3];
}
var [b6, b7] = foo();
var [...b8] = foo();
//      S is not a tuple- like type and the numeric index signature type of S is assignable to the target given in E.
var temp = [1, 2, 3];
var [c0, c1] = [...temp];
var [c2] = [];
var [[[c3]], [[[[c4]]]]] = [[[]], [[[[]]]]];
var [[c5], c6] = [[1], true];
var [, c7] = [1, 2, 3];
var [, , , c8] = [1, 2, 3, 4];
var [, , , c9] = [1, 2, 3, 4];
var [, , , ...c10] = [1, 2, 3, 4, "hello"];
var [c11, c12, ...c13] = [1, 2, "string"];
var [c14, c15, c16] = [1, 2, "string"];
"
`;

exports[`TSC: es6/destructuring destructuringArrayBindingPatternAndAssignment2 1`] = `
"// @target: es2015
// V is an array assignment pattern, S is the type Any or an array-like type (section 3.3.2), and, for each assignment element E in V,
//      S is the type Any, or
var [[a0], [[a1]]] = [];
// Error
var [[a2], [[a3]]] = undefined;
// Error
// V is an array assignment pattern, S is the type Any or an array-like type (section 3.3.2), and, for each assignment element E in V,
//      S is a tuple- like type (section 3.3.3) with a property named N of a type that is assignable to the target given in E,
//        where N is the numeric index of E in the array assignment pattern, or
// Error
// V is an array assignment pattern, S is the type Any or an array-like type (section 3.3.2), and, for each assignment element E in V,
//      S is a tuple- like type (section 3.3.3) with a property named N of a type that is assignable to the target given in E,
//        where N is the numeric index of E in the array assignment pattern, or
var [b0, b1, b2] = [1, 2, "string"];
// Error
function bar() {
	return [1, 2, 3];
}
var [b3="string", b4, b5] = bar();
// Error
// V is an array assignment pattern, S is the type Any or an array-like type (section 3.3.2), and, for each assignment element E in V,
//      S is not a tuple- like type and the numeric index signature type of S is assignable to the target given in E.
var temp = [1, 2, 3];
var [c0, c1] = [...temp];
// Error
var [c2, c3] = [...temp];
// Error
function foo(idx) {
	return { 2: true };
}
var [c4, c5, c6] = foo(1);
// Error
"
`;

exports[`TSC: es6/destructuring destructuringArrayBindingPatternAndAssignment3 1`] = `
"const [a, b=a] = [1];
// ok
const [c, d=c, e=e] = [1];
// error for e = e
const [f, g=f, h=i, i=f] = [1];
// error for h = i
(function([a, b=a]) {
})(// ok
[1]);
(function([c, d=c, e=e]) {
})(// error for e = e
[1]);
(function([f, g=f, h=i, i=f]) {
})(// error for h = i
[1]);
"
`;

exports[`TSC: es6/destructuring destructuringArrayBindingPatternAndAssignment4 1`] = `
"// #35497
const [value] = data;
// Error
"
`;

exports[`TSC: es6/destructuring destructuringArrayBindingPatternAndAssignment5SiblingInitializer 1`] = `
"// To be inferred as \`number\`
function f1() {
	const [a1, b1=a1] = [1];
	const [a2, b2=1 + a2] = [1];
}
// To be inferred as \`string\`
function f2() {
	const [a1, b1=a1] = ["hi"];
	const [a2, b2=a2 + "!"] = ["hi"];
}
// To be inferred as \`string | number\`
function f3() {
	const [a1, b1=a1] = ["hi", 1];
	const [a2, b2=a2 + "!"] = ["hi", 1];
}
// Based on comment:
//   - https://github.com/microsoft/TypeScript/issues/49989#issuecomment-1852694486
function f4() {
	const [a, b=a] = yadda ?? [];
}
"
`;

exports[`TSC: es6/destructuring destructuringAssignabilityCheck 1`] = `
"const [] = {};
// should be error
const {} = undefined;
// error correctly
(([]) => 0)({});
// should be error
(({}) => 0)(undefined);
// should be error
function foo({}) {
	return 0;
}
function bar([]) {
	return 0;
}
const {} = 1;
const [] = {};
"
`;

exports[`TSC: es6/destructuring destructuringCatch 1`] = `
"try {
	throw [0, 1];
} catch ([a, b]) {
	a + b;
}
try {
	throw { a: 0, b: 1 };
} catch ({ a:a, b:b }) {
	a + b;
}
try {
	throw [{ x: [0], z: 1 }];
} catch ([{ x:[y], z:z }]) {
	y + z;
}
// Test of comment ranges. A fix to GH#11755 should update this.
try {
} catch (/*Test comment ranges*/
[/*a*/
a]) {
}
"
`;

exports[`TSC: es6/destructuring destructuringControlFlow 1`] = `
"function f1(obj) {
	if (obj.a) {
		obj = {};
		let a1 = obj["a"];
		// string | undefined
let a2 = obj.a;
	}
}
// string | undefined
function f2(obj) {
	let a0 = obj[0];
	// number | null
let a1 = obj[1];
	// string | null
let [b0, b1] = obj;
	([a0, a1] = obj);
	if (obj[0] && obj[1]) {
		let c0 = obj[0];
		// number
let c1 = obj[1];
		// string
let [d0, d1] = obj;
		([c0, c1] = obj);
	}
}
function f3(obj) {
	if (obj.a && obj.b) {
		let { a:a, b:b } = obj;
		// number, string
({ a, b } = obj);
	}
}
function f4() {
	let x;
	({ x } = 0);
	// Error
({ ["x"]:x } = 0);
	// Error
({ ["x" + ""]:x } = 0);
}
// Errpr
// Repro from #31770
let [key, value] = ["foo"];
value.toUpperCase();
// Error
"
`;

exports[`TSC: es6/destructuring destructuringEvaluationOrder 1`] = `
"// https://github.com/microsoft/TypeScript/issues/39205
let trace = [];
let order = (n) => trace.push(n);
// order(0) should evaluate before order(1) because the first element is undefined
let [{ [order(1)]:x }=order(0)] = [];
// order(0) should not evaluate because the first element is defined
let [{ [order(1)]:y }=order(0)] = [{}];
// order(0) should evaluate first (destructuring of object literal {})
// order(1) should evaluate next (initializer because property is undefined)
// order(2) should evaluate last (evaluate object binding pattern from initializer)
let { [order(0)]:{ [order(2)]:z }=order(1), ...w } = {};
// https://github.com/microsoft/TypeScript/issues/39181
// b = a must occur *after* 'a' has been assigned
let [{ ...a }, b=a] = [{ x: 1 }];
"
`;

exports[`TSC: es6/destructuring destructuringInFunctionType 1`] = `
"var v1 = ([a, b, c]) => "hello";
var v2;
"
`;

exports[`TSC: es6/destructuring destructuringObjectAssignmentPatternWithNestedSpread 1`] = `
"let a,b,c = { x: { a: 1, y: 2 } },d;
({ x:{ a, ...b }=d } = c);
"
`;

exports[`TSC: es6/destructuring destructuringObjectBindingPatternAndAssignment1ES5 1`] = `
"// @strict: false
// In a destructuring assignment expression, the type of the expression on the right must be assignable to the assignment target on the left.
// An expression of type S is considered assignable to an assignment target V if one of the following is true
// V is an object assignment pattern and, for each assignment property P in V,
//      S is the type Any, or
var { a1:a1 } = undefined;
var { a2:a2 } = {};
// V is an object assignment pattern and, for each assignment property P in V,
//      S has an apparent property with the property name specified in
//          P of a type that is assignable to the target given in P, or
var { b1:b1 } = { b1: 1 };
var { b2:{ b21:b21 }={ b21: "string" } } = { b2: { b21: "world" } };
var { 1:b3 } = { 1: "string" };
var { b4:b4=1 } = { b4: 100000 };
var { b5:{ b52:b52 } } = { b5: { b52 } };
// V is an object assignment pattern and, for each assignment property P in V,
//      P specifies a numeric property name and S has a numeric index signature
//          of a type that is assignable to the target given in P, or
function foo() {
	return { 1: true };
}
function bar() {
	return { 2: true };
}
var { 1:c0 } = foo();
var { 1:c1 } = bar();
// V is an object assignment pattern and, for each assignment property P in V,
//      S has a string index signature of a type that is assignable to the target given in P
function foo1() {
	return { "prop1": 2 };
}
var { "prop1":d1 } = foo1();
var { "prop2":d1 } = foo1();
"
`;

exports[`TSC: es6/destructuring destructuringObjectBindingPatternAndAssignment1ES6 1`] = `
"// @strict: false
// In a destructuring assignment expression, the type of the expression on the right must be assignable to the assignment target on the left.
// An expression of type S is considered assignable to an assignment target V if one of the following is true
// V is an object assignment pattern and, for each assignment property P in V,
//      S is the type Any, or
var { a1:a1 } = undefined;
var { a2:a2 } = {};
// V is an object assignment pattern and, for each assignment property P in V,
//      S has an apparent property with the property name specified in
//          P of a type that is assignable to the target given in P, or
var { b1:b1 } = { b1: 1 };
var { b2:{ b21:b21 }={ b21: "string" } } = { b2: { b21: "world" } };
var { 1:b3 } = { 1: "string" };
var { b4:b4=1 } = { b4: 100000 };
var { b5:{ b52:b52 } } = { b5: { b52 } };
// V is an object assignment pattern and, for each assignment property P in V,
//      P specifies a numeric property name and S has a numeric index signature
//          of a type that is assignable to the target given in P, or
function foo() {
	return { 1: true };
}
function bar() {
	return { 2: true };
}
var { 1:c0 } = foo();
var { 1:c1 } = bar();
// V is an object assignment pattern and, for each assignment property P in V,
//      S has a string index signature of a type that is assignable to the target given in P
function foo1() {
	return { "prop1": 2 };
}
var { "prop1":d1 } = foo1();
var { "prop2":d1 } = foo1();
"
`;

exports[`TSC: es6/destructuring destructuringObjectBindingPatternAndAssignment4 1`] = `
"const { a:a=1, b:b=2, c:c=b, // ok
d:d=a, // ok
e:e=f, // error
f:f=f } = // error
// error
{};
"
`;

exports[`TSC: es6/destructuring destructuringObjectBindingPatternAndAssignment5 1`] = `
"function a() {
	let x;
	let y;
	({ x, ...y } = {});
}
"
`;

exports[`TSC: es6/destructuring destructuringObjectBindingPatternAndAssignment6 1`] = `
"const a = "a";
const b = "b";
const { [a]:aVal, [b]:bVal } = (() => {
	return { [a]: 1, [b]: 1 };
})();
console.log(aVal, bVal);
"
`;

exports[`TSC: es6/destructuring destructuringObjectBindingPatternAndAssignment7 1`] = `
"var K = /* @__PURE__ */ ((K) => {K[K["a"]="a"]="a";K[K["b"]="b"]="b";return K;})(K || {});
const { [K.a]:aVal, [K.b]:bVal } = (() => {
	return { [K.a]: 1, [K.b]: 1 };
})();
console.log(aVal, bVal);
"
`;

exports[`TSC: es6/destructuring destructuringObjectBindingPatternAndAssignment8 1`] = `
"const K = { a: "a", b: "b" };
const { [K.a]:aVal, [K.b]:bVal } = (() => {
	return { [K.a]: 1, [K.b]: 1 };
})();
console.log(aVal, bVal);
"
`;

exports[`TSC: es6/destructuring destructuringObjectBindingPatternAndAssignment9SiblingInitializer 1`] = `
"// To be inferred as \`number\`
function f1() {
	const { a1:a1, b1:b1=a1 } = { a1: 1 };
	const { a2:a2, b2:b2=1 + a2 } = { a2: 1 };
}
// To be inferred as \`string\`
function f2() {
	const { a1:a1, b1:b1=a1 } = { a1: "hi" };
	const { a2:a2, b2:b2=a2 + "!" } = { a2: "hi" };
}
// To be inferred as \`string | number\`
function f3() {
	const { a1:a1, b1:b1=a1 } = { a1: "hi", b1: 1 };
	const { a2:a2, b2:b2=a2 + "!" } = { a2: "hi", b2: 1 };
}
// Based on comment:
//   - https://github.com/microsoft/TypeScript/issues/49989#issuecomment-1852694486
function f4() {
	const { a:a, b:b=a } = yadda ?? {};
}
"
`;

exports[`TSC: es6/destructuring destructuringParameterDeclaration10 1`] = `
"export function prepareConfig({ additionalFiles:{ json:json=[] }={} }={}) {
	json;
}
// string[]
// string[]
// string[]
export function prepareConfigWithoutAnnotation({ additionalFiles:{ json:json=[] }={} }={}) {
	json;
}
export const prepareConfigWithContextualSignature = ({ additionalFiles:{ json:json=[] }={} }={}) => {
	json;
};
// string[]
// string[]
// string[]
"
`;

exports[`TSC: es6/destructuring destructuringParameterDeclaration1ES5 1`] = `
"// @target: es2015
// A parameter declaration may specify either an identifier or a binding pattern.
// The identifiers specified in parameter declarations and binding patterns
// in a parameter list must be unique within that parameter list.
// If the declaration includes a type annotation, the parameter is of that type
function a1([a, b, [[c]]]) {
}
function a2(o) {
}
function a3({ j:j, k:k, l:{ m:m, n:n }, q:[a, b, c] }) {
}
;
function a4({ x:x, a:a }) {
}
a1([1, 2, [["world"]]]);
a1([1, 2, [["world"]], 3]);
// If the declaration includes an initializer expression (which is permitted only
// when the parameter list occurs in conjunction with a function body),
// the parameter type is the widened form (section 3.11) of the type of the initializer expression.
function b1(z=[undefined, null]) {
}
;
function b2(z=null,o={ x: 0, y: undefined }) {
}
function b3({ z:{ x:x, y:{ j:j } } }={ z: { x: "hi", y: { j: 1 } } }) {
}
function b6([a, z, y]=[undefined, null, undefined]) {
}
function b7([[a], b, [[c, d]]]=[[undefined], undefined, [[undefined, undefined]]]) {
}
b1([1, 2, 3]);
// z is widen to the type any[]
b2("string", { x: 200, y: "string" });
b2("string", { x: 200, y: true });
b6(["string", 1, 2]);
// Shouldn't be an error
b7([["string"], 1, [[true, false]]]);
// Shouldn't be an error
// If the declaration specifies a binding pattern, the parameter type is the implied type of that binding pattern (section 5.1.3)
var Foo = /* @__PURE__ */ ((Foo) => {Foo[Foo["a"]=0]="a";return Foo;})(Foo || {});
function c0({ z:{ x:x, y:{ j:j } } }) {
}
function c1({ z:z }={ z: 10 }) {
}
function c2({ z:z=10 }) {
}
function c3({ b:b }={ b: "hello" }) {
}
function c5([a, b, [[c]]]) {
}
function c6([a, b, [[c=1]]]) {
}
c0({ z: { x: 1, y: { j: "world" } } });
// Implied type is { z: {x: any, y: {j: any}} }
c0({ z: { x: "string", y: { j: true } } });
// Implied type is { z: {x: any, y: {j: any}} }
c1();
// Implied type is {z:number}?
c1({ z: 1 });
// Implied type is {z:number}? 
c2({});
// Implied type is {z?: number}
c2({ z: 1 });
// Implied type is {z?: number}
c3({ b: 1 });
// Implied type is { b: number|string }.
c5([1, 2, [["string"]]]);
// Implied type is is [any, any, [[any]]]
c5([1, 2, [["string"]], false, true]);
// Implied type is is [any, any, [[any]]]
// A parameter can be marked optional by following its name or binding pattern with a question mark (?)
// or by including an initializer.
function d0(x) {
}
function d0(x=10) {
}
class C2 {
	constructor() {
	}
	d3() {
	}
	d4() {
	}
	e0([a, b, c]) {
	}
}
class C3 {
	d3([a, b, c]) {
	}
	d4({ x:x, y:y, z:z }) {
	}
	e0([a, b, c]) {
	}
}
function d5({ x:x, y:y }={ x: 1, y: 2 }) {
}
d5();
// Parameter is optional as its declaration included an initializer
// Destructuring parameter declarations do not permit type annotations on the individual binding patterns,
// as such annotations would conflict with the already established meaning of colons in object literals.
// Type annotations must instead be written on the top- level parameter declaration
function e1({ x:number }) {
}
// x has type any NOT number
function e2({ x:x }) {
}
// x is type number
function e3({ x:x }) {
}
// x is an optional with type number
function e4({ x:[number, string, any] }) {
}
// x has type [any, any, any]
function e5({ x:[a, b, c] }) {
}
// x has type [any, any, any]
"
`;

exports[`TSC: es6/destructuring destructuringParameterDeclaration1ES5iterable 1`] = `
"// @target: es2015
// A parameter declaration may specify either an identifier or a binding pattern.
// The identifiers specified in parameter declarations and binding patterns
// in a parameter list must be unique within that parameter list.
// If the declaration includes a type annotation, the parameter is of that type
function a1([a, b, [[c]]]) {
}
function a2(o) {
}
function a3({ j:j, k:k, l:{ m:m, n:n }, q:[a, b, c] }) {
}
;
function a4({ x:x, a:a }) {
}
a1([1, 2, [["world"]]]);
a1([1, 2, [["world"]], 3]);
// If the declaration includes an initializer expression (which is permitted only
// when the parameter list occurs in conjunction with a function body),
// the parameter type is the widened form (section 3.11) of the type of the initializer expression.
function b1(z=[undefined, null]) {
}
;
function b2(z=null,o={ x: 0, y: undefined }) {
}
function b3({ z:{ x:x, y:{ j:j } } }={ z: { x: "hi", y: { j: 1 } } }) {
}
function b6([a, z, y]=[undefined, null, undefined]) {
}
function b7([[a], b, [[c, d]]]=[[undefined], undefined, [[undefined, undefined]]]) {
}
b1([1, 2, 3]);
// z is widen to the type any[]
b2("string", { x: 200, y: "string" });
b2("string", { x: 200, y: true });
b6(["string", 1, 2]);
// Shouldn't be an error
b7([["string"], 1, [[true, false]]]);
// Shouldn't be an error
// If the declaration specifies a binding pattern, the parameter type is the implied type of that binding pattern (section 5.1.3)
var Foo = /* @__PURE__ */ ((Foo) => {Foo[Foo["a"]=0]="a";return Foo;})(Foo || {});
function c0({ z:{ x:x, y:{ j:j } } }) {
}
function c1({ z:z }={ z: 10 }) {
}
function c2({ z:z=10 }) {
}
function c3({ b:b }={ b: "hello" }) {
}
function c5([a, b, [[c]]]) {
}
function c6([a, b, [[c=1]]]) {
}
c0({ z: { x: 1, y: { j: "world" } } });
// Implied type is { z: {x: any, y: {j: any}} }
c0({ z: { x: "string", y: { j: true } } });
// Implied type is { z: {x: any, y: {j: any}} }
c1();
// Implied type is {z:number}?
c1({ z: 1 });
// Implied type is {z:number}?
c2({});
// Implied type is {z?: number}
c2({ z: 1 });
// Implied type is {z?: number}
c3({ b: 1 });
// Implied type is { b: number|string }.
c5([1, 2, [["string"]]]);
// Implied type is is [any, any, [[any]]]
c5([1, 2, [["string"]], false, true]);
// Implied type is is [any, any, [[any]]]
// A parameter can be marked optional by following its name or binding pattern with a question mark (?)
// or by including an initializer.
function d0(x) {
}
function d0(x=10) {
}
class C2 {
	constructor() {
	}
	d3() {
	}
	d4() {
	}
	e0([a, b, c]) {
	}
}
class C3 {
	d3([a, b, c]) {
	}
	d4({ x:x, y:y, z:z }) {
	}
	e0([a, b, c]) {
	}
}
function d5({ x:x, y:y }={ x: 1, y: 2 }) {
}
d5();
// Parameter is optional as its declaration included an initializer
// Destructuring parameter declarations do not permit type annotations on the individual binding patterns,
// as such annotations would conflict with the already established meaning of colons in object literals.
// Type annotations must instead be written on the top- level parameter declaration
function e1({ x:number }) {
}
// x has type any NOT number
function e2({ x:x }) {
}
// x is type number
function e3({ x:x }) {
}
// x is an optional with type number
function e4({ x:[number, string, any] }) {
}
// x has type [any, any, any]
function e5({ x:[a, b, c] }) {
}
// x has type [any, any, any]
"
`;

exports[`TSC: es6/destructuring destructuringParameterDeclaration3ES5 1`] = `
"// @target: es6
// If the parameter is a rest parameter, the parameter type is any[]
// A type annotation for a rest parameter must denote an array type.
// RestParameter:
//     ...   Identifier   TypeAnnotation(opt)
function a1(...x) {
}
function a2(...a) {
}
function a3(...a) {
}
function a4(...a) {
}
function a5(...a) {
}
function a9([a, b, [[c]]]) {
}
function a10([a, b, [[c]], ...x]) {
}
function a11([a, b, c, ...x]) {
}
var array = [1, 2, 3];
var array2 = [true, false, "hello"];
a2([...array]);
a1(...array);
a9([1, 2, [["string"]], false, true]);
// Parameter type is [any, any, [[any]]]
a10([1, 2, [["string"]], false, true]);
// Parameter type is any[]
a10([1, 2, 3, false, true]);
// Parameter type is any[]
a10([1, 2]);
// Parameter type is any[]
a11([1, 2]);
// Parameter type is number[]
// Rest parameter with generic
function foo(...a) {
}
foo("hello", 1, 2);
foo("hello", "world");
var E = /* @__PURE__ */ ((E) => {E[E["a"]=0]="a";E[E["b"]=1]="b";return E;})(E || {});
function foo1(...a) {
}
foo1(1, 2, 3, E.a);
foo1(1, 2, 3, E1.a, E.b);
"
`;

exports[`TSC: es6/destructuring destructuringParameterDeclaration3ES5iterable 1`] = `
"// @target: es5, es2015
// If the parameter is a rest parameter, the parameter type is any[]
// A type annotation for a rest parameter must denote an array type.
// RestParameter:
//     ...   Identifier   TypeAnnotation(opt)
function a1(...x) {
}
function a2(...a) {
}
function a3(...a) {
}
function a4(...a) {
}
function a5(...a) {
}
function a9([a, b, [[c]]]) {
}
function a10([a, b, [[c]], ...x]) {
}
function a11([a, b, c, ...x]) {
}
var array = [1, 2, 3];
var array2 = [true, false, "hello"];
a2([...array]);
a1(...array);
a9([1, 2, [["string"]], false, true]);
// Parameter type is [any, any, [[any]]]
a10([1, 2, [["string"]], false, true]);
// Parameter type is any[]
a10([1, 2, 3, false, true]);
// Parameter type is any[]
a10([1, 2]);
// Parameter type is any[]
a11([1, 2]);
// Parameter type is number[]
// Rest parameter with generic
function foo(...a) {
}
foo("hello", 1, 2);
foo("hello", "world");
var E = /* @__PURE__ */ ((E) => {E[E["a"]=0]="a";E[E["b"]=1]="b";return E;})(E || {});
function foo1(...a) {
}
foo1(1, 2, 3, E.a);
foo1(1, 2, 3, E1.a, E.b);
"
`;

exports[`TSC: es6/destructuring destructuringParameterDeclaration3ES6 1`] = `
"// @target: es6
// If the parameter is a rest parameter, the parameter type is any[]
// A type annotation for a rest parameter must denote an array type.
// RestParameter:
//     ...   Identifier   TypeAnnotation(opt)
function a1(...x) {
}
function a2(...a) {
}
function a3(...a) {
}
function a4(...a) {
}
function a5(...a) {
}
function a9([a, b, [[c]]]) {
}
function a10([a, b, [[c]], ...x]) {
}
function a11([a, b, c, ...x]) {
}
var array = [1, 2, 3];
var array2 = [true, false, "hello"];
a2([...array]);
a1(...array);
a9([1, 2, [["string"]], false, true]);
// Parameter type is [any, any, [[any]]]
a10([1, 2, [["string"]], false, true]);
// Parameter type is any[]
a10([1, 2, 3, false, true]);
// Parameter type is any[]
a10([1, 2]);
// Parameter type is any[]
a11([1, 2]);
// Parameter type is number[]
// Rest parameter with generic
function foo(...a) {
}
foo("hello", 1, 2);
foo("hello", "world");
var E = /* @__PURE__ */ ((E) => {E[E["a"]=0]="a";E[E["b"]=1]="b";return E;})(E || {});
function foo1(...a) {
}
foo1(1, 2, 3, E.a);
foo1(1, 2, 3, E1.a, E.b);
"
`;

exports[`TSC: es6/destructuring destructuringParameterDeclaration5 1`] = `
"// @target: es2015
// Parameter Declaration with generic
class Class {
	constructor() {
	}
}
class SubClass extends Class {
	foo;
	constructor() {
		super();
	}
}
class D {
	foo;
	constructor() {
	}
}
class SubD extends D {
	bar;
	constructor() {
		super();
	}
}
function d0({ x:x }={ x: new Class() }) {
}
function d1({ x:x }) {
}
function d2({ x:x }) {
}
function d3({ y:y }) {
}
function d4({ y:y }={ y: new D() }) {
}
var obj = new Class();
d0({ x: 1 });
d0({ x: {} });
d0({ x: "string" });
d1({ x: new Class() });
d1({ x: {} });
d1({ x: "string" });
d2({ x: new SubClass() });
d2({ x: {} });
d3({ y: new SubD() });
d3({ y: new SubClass() });
// Error
d3({ y: new Class() });
d3({});
d3({ y: 1 });
d3({ y: "world" });
"
`;

exports[`TSC: es6/destructuring destructuringParameterDeclaration7ES5 1`] = `
"// @target: es5, es2015
function foo({},{ foo:foo, bar:bar }) {
}
function baz([],{ foo:foo, bar:bar }) {
}
function one([],{}) {
}
function two([],[a, b, c]) {
}
"
`;

exports[`TSC: es6/destructuring destructuringParameterDeclaration7ES5iterable 1`] = `
"// @target: es5, es2015
function foo({},{ foo:foo, bar:bar }) {
}
function baz([],{ foo:foo, bar:bar }) {
}
function one([],{}) {
}
function two([],[a, b, c]) {
}
"
`;

exports[`TSC: es6/destructuring destructuringParameterDeclaration8 1`] = `
"// explicit type annotation should cause \`method\` to have type 'x' | 'y'
// both inside and outside \`test\`.
function test({ method:method="z", nested:{ p:p="c" } }) {
	method;
	p;
}
test({});
test({ method: "x", nested: { p: "a" } });
test({ method: "z", nested: { p: "b" } });
test({ method: "one", nested: { p: "a" } });
"
`;

exports[`TSC: es6/destructuring destructuringParameterDeclaration9 1`] = `
"// https://github.com/microsoft/TypeScript/issues/59936
/**
 * @param {Object} [config]
 * @param {Partial<Record<'json' | 'jsonc' | 'json5', string[]>>} [config.additionalFiles]
 */
export function prepareConfig({ additionalFiles:{ json:json=[] }={} }={}) {
	json;
}
// string[]
// string[]
// string[]
export function prepareConfigWithoutAnnotation({ additionalFiles:{ json:json=[] }={} }={}) {
	json;
}
/** @type {(param: {
  additionalFiles?: Partial<Record<"json" | "jsonc" | "json5", string[]>>;
}) => void} */
export const prepareConfigWithContextualSignature = ({ additionalFiles:{ json:json=[] }={} }={}) => {
	json;
};
// string[]
// string[]
// string[]
// Additional repros from https://github.com/microsoft/TypeScript/issues/59936
/**
 * @param {{ a?: { json?: string[] }}} [config]
 */
function f1({ a:{ json:json=[] }={} }={}) {
	return json;
}
/**
 * @param {[[string[]?]?]} [x]
 */
function f2([[json=[]]=[]]=[]) {
	return json;
}
"
`;

exports[`TSC: es6/destructuring destructuringParameterProperties1 1`] = `
"// @module: commonjs
class C1 {
	constructor([x, y, z]) {
		this.[x, y, z] = [x, y, z];
	}
}
class C2 {
	constructor([x, y, z]) {
		this.[x, y, z] = [x, y, z];
	}
}
class C3 {
	constructor({ x:x, y:y, z:z }) {
		this.{ x:x, y:y, z:z } = { x:x, y:y, z:z };
	}
}
var c1 = new C1([]);
c1 = new C1(["larry", "{curly}", "moe"]);
var useC1Properties = c1.x === c1.y && c1.y === c1.z;
var c2 = new C2(["10", 10, !!10]);
var [c2_x, c2_y, c2_z] = [c2.x, c2.y, c2.z];
var c3 = new C3({ x: 0, y: "", z: false });
c3 = new C3({ x: 0, "y": "y", z: true });
var [c3_x, c3_y, c3_z] = [c3.x, c3.y, c3.z];
"
`;

exports[`TSC: es6/destructuring destructuringParameterProperties2 1`] = `
"// @module: commonjs
class C1 {
	constructor(k,[a, b, c]) {
		this.k = k;
		this.[a, b, c] = [a, b, c];
		if ((b === undefined && c === undefined) || (this.b === undefined && this.c === undefined)) {
			this.a = a || k;
		}
	}
	getA() {
		return this.a;
	}
	getB() {
		return this.b;
	}
	getC() {
		return this.c;
	}
}
var x = new C1(undefined, [0, undefined, ""]);
var [x_a, x_b, x_c] = [x.getA(), x.getB(), x.getC()];
var y = new C1(10, [0, "", true]);
var [y_a, y_b, y_c] = [y.getA(), y.getB(), y.getC()];
var z = new C1(10, [undefined, "", null]);
var [z_a, z_b, z_c] = [z.getA(), z.getB(), z.getC()];
"
`;

exports[`TSC: es6/destructuring destructuringParameterProperties3 1`] = `
"// @module: commonjs
class C1 {
	constructor(k,[a, b, c]) {
		this.k = k;
		this.[a, b, c] = [a, b, c];
		if ((b === undefined && c === undefined) || (this.b === undefined && this.c === undefined)) {
			this.a = a || k;
		}
	}
	getA() {
		return this.a;
	}
	getB() {
		return this.b;
	}
	getC() {
		return this.c;
	}
}
var x = new C1(undefined, [0, true, ""]);
var [x_a, x_b, x_c] = [x.getA(), x.getB(), x.getC()];
var y = new C1(10, [0, true, true]);
var [y_a, y_b, y_c] = [y.getA(), y.getB(), y.getC()];
var z = new C1(10, [undefined, "", ""]);
var [z_a, z_b, z_c] = [z.getA(), z.getB(), z.getC()];
var w = new C1(10, [undefined, undefined, undefined]);
var [z_a, z_b, z_c] = [z.getA(), z.getB(), z.getC()];
"
`;

exports[`TSC: es6/destructuring destructuringParameterProperties4 1`] = `
"// @target: es6
class C1 {
	constructor(k,[a, b, c]) {
		this.k = k;
		this.[a, b, c] = [a, b, c];
		if ((b === undefined && c === undefined) || (this.b === undefined && this.c === undefined)) {
			this.a = a || k;
		}
	}
	getA() {
		return this.a;
	}
	getB() {
		return this.b;
	}
	getC() {
		return this.c;
	}
}
class C2 extends C1 {
	doSomethingWithSuperProperties() {
		return \`\${this.a} \${this.b} \${this.c}\`;
	}
}
"
`;

exports[`TSC: es6/destructuring destructuringParameterProperties5 1`] = `
"// @module: commonjs
class C1 {
	constructor([{ x1:x1, x2:x2, x3:x3 }, y, z]) {
		this.[{ x1:x1, x2:x2, x3:x3 }, y, z] = [{ x1:x1, x2:x2, x3:x3 }, y, z];
		var foo = x1 || x2 || x3 || y || z;
		var bar = this.x1 || this.x2 || this.x3 || this.y || this.z;
	}
}
var a = new C1([{ x1: 10, x2: "", x3: true }, "", false]);
var [a_x1, a_x2, a_x3, a_y, a_z] = [a.x1, a.x2, a.x3, a.y, a.z];
"
`;

exports[`TSC: es6/destructuring destructuringReassignsRightHandSide 1`] = `
"var foo = { foo: 1, bar: 2 };
var bar;
// reassignment in destructuring pattern
({ foo, bar } = foo);
// reassignment in subsequent var
var { foo:foo, baz:baz } = foo;
"
`;

exports[`TSC: es6/destructuring destructuringSameNames 1`] = `""`;

exports[`TSC: es6/destructuring destructuringSpread 1`] = `
"const { x:x } = { ...{}, x: 0 };
const { y:y } = { y: 0, ...{} };
const { z:z, a:a, b:b } = { z: 0, ...{ a: 0, b: 0 } };
const { c:c, d:d, e:e, f:f, g:g } = { ...{ ...{ ...{ c: 0 }, d: 0 }, e: 0 }, f: 0 };
"
`;

exports[`TSC: es6/destructuring destructuringTypeAssertionsES5_1 1`] = `
"var { x:x } = foo();
"
`;

exports[`TSC: es6/destructuring destructuringTypeAssertionsES5_2 1`] = `
"var { x:x } = foo();
"
`;

exports[`TSC: es6/destructuring destructuringTypeAssertionsES5_3 1`] = `
"var { x:x } = foo();
"
`;

exports[`TSC: es6/destructuring destructuringTypeAssertionsES5_4 1`] = `
"var { x:x } = foo();
"
`;

exports[`TSC: es6/destructuring destructuringTypeAssertionsES5_5 1`] = `
"var { x:x } = 0;
"
`;

exports[`TSC: es6/destructuring destructuringTypeAssertionsES5_6 1`] = `
"var { x:x } = new Foo();
"
`;

exports[`TSC: es6/destructuring destructuringTypeAssertionsES5_7 1`] = `
"var { x:x } = new Foo();
"
`;

exports[`TSC: es6/destructuring destructuringVariableDeclaration1ES5 1`] = `
"// @target: es2015
// The type T associated with a destructuring variable declaration is determined as follows:
//      If the declaration includes a type annotation, T is that type.
var { a1:a1, a2:a2 } = { a1: 10, a2: "world" };
var [a3, [[a4]], a5] = [1, [["hello"]], true];
// The type T associated with a destructuring variable declaration is determined as follows:
//      Otherwise, if the declaration includes an initializer expression, T is the type of that initializer expression.
var { b1:{ b11:b11 }={ b11: "string" } } = { b1: { b11: "world" } };
var temp = { t1: true, t2: "false" };
var [b2=3, b3=true, b4=temp] = [3, false, { t1: false, t2: "hello" }];
var [b5=3, b6=true, b7=temp] = [undefined, undefined, undefined];
// The type T associated with a binding element is determined as follows:
//      If the binding element is a rest element, T is an array type with
//          an element type E, where E is the type of the numeric index signature of S.
var [...c1] = [1, 2, 3];
var [...c2] = [1, 2, 3, "string"];
// The type T associated with a binding element is determined as follows:
//      Otherwise, if S is a tuple- like type (section 3.3.3):
//          	Let N be the zero-based index of the binding element in the array binding pattern.
// 	            If S has a property with the numerical name N, T is the type of that property.
var [d1, d2] = [1, "string"];
// The type T associated with a binding element is determined as follows:
//      Otherwise, if S is a tuple- like type (section 3.3.3):
//              Otherwise, if S has a numeric index signature, T is the type of the numeric index signature.
var temp1 = [true, false, true];
var [d3, d4] = [1, "string", ...temp1];
//  Combining both forms of destructuring,
var { e:[e1, e2, e3={ b1: 1000, b4: 200 }] } = { e: [1, 2, { b1: 4, b4: 0 }] };
var { f:[f1, f2, { f3:f4, f5:f5 }, ] } = { f: [1, 2, { f3: 4, f5: 0 }] };
// When a destructuring variable declaration, binding property, or binding element specifies
// an initializer expression, the type of the initializer expression is required to be assignable
// to the widened form of the type associated with the destructuring variable declaration, binding property, or binding element.
var { g:{ g1:g1=[undefined, null] } } = { g: { g1: [1, 2] } };
var { h:{ h1:h1=[undefined, null] } } = { h: { h1: [1, 2] } };
"
`;

exports[`TSC: es6/destructuring destructuringVariableDeclaration1ES5iterable 1`] = `
"// @target: es5,es2015
// The type T associated with a destructuring variable declaration is determined as follows:
//      If the declaration includes a type annotation, T is that type.
var { a1:a1, a2:a2 } = { a1: 10, a2: "world" };
var [a3, [[a4]], a5] = [1, [["hello"]], true];
// The type T associated with a destructuring variable declaration is determined as follows:
//      Otherwise, if the declaration includes an initializer expression, T is the type of that initializer expression.
var { b1:{ b11:b11 }={ b11: "string" } } = { b1: { b11: "world" } };
var temp = { t1: true, t2: "false" };
var [b2=3, b3=true, b4=temp] = [3, false, { t1: false, t2: "hello" }];
var [b5=3, b6=true, b7=temp] = [undefined, undefined, undefined];
// The type T associated with a binding element is determined as follows:
//      If the binding element is a rest element, T is an array type with
//          an element type E, where E is the type of the numeric index signature of S.
var [...c1] = [1, 2, 3];
var [...c2] = [1, 2, 3, "string"];
// The type T associated with a binding element is determined as follows:
//      Otherwise, if S is a tuple- like type (section 3.3.3):
//          	Let N be the zero-based index of the binding element in the array binding pattern.
// 	            If S has a property with the numerical name N, T is the type of that property.
var [d1, d2] = [1, "string"];
// The type T associated with a binding element is determined as follows:
//      Otherwise, if S is a tuple- like type (section 3.3.3):
//              Otherwise, if S has a numeric index signature, T is the type of the numeric index signature.
var temp1 = [true, false, true];
var [d3, d4] = [1, "string", ...temp1];
//  Combining both forms of destructuring,
var { e:[e1, e2, e3={ b1: 1000, b4: 200 }] } = { e: [1, 2, { b1: 4, b4: 0 }] };
var { f:[f1, f2, { f3:f4, f5:f5 }, ] } = { f: [1, 2, { f3: 4, f5: 0 }] };
// When a destructuring variable declaration, binding property, or binding element specifies
// an initializer expression, the type of the initializer expression is required to be assignable
// to the widened form of the type associated with the destructuring variable declaration, binding property, or binding element.
var { g:{ g1:g1=[undefined, null] } } = { g: { g1: [1, 2] } };
var { h:{ h1:h1=[undefined, null] } } = { h: { h1: [1, 2] } };
"
`;

exports[`TSC: es6/destructuring destructuringVariableDeclaration1ES6 1`] = `
"// @target: es6
// The type T associated with a destructuring variable declaration is determined as follows:
//      If the declaration includes a type annotation, T is that type.
var { a1:a1, a2:a2 } = { a1: 10, a2: "world" };
var [a3, [[a4]], a5] = [1, [["hello"]], true];
// The type T associated with a destructuring variable declaration is determined as follows:
//      Otherwise, if the declaration includes an initializer expression, T is the type of that initializer expression.
var { b1:{ b11:b11 }={ b11: "string" } } = { b1: { b11: "world" } };
var temp = { t1: true, t2: "false" };
var [b2=3, b3=true, b4=temp] = [3, false, { t1: false, t2: "hello" }];
var [b5=3, b6=true, b7=temp] = [undefined, undefined, undefined];
// The type T associated with a binding element is determined as follows:
//      If the binding element is a rest element, T is an array type with
//          an element type E, where E is the type of the numeric index signature of S.
var [...c1] = [1, 2, 3];
var [...c2] = [1, 2, 3, "string"];
// The type T associated with a binding element is determined as follows:
//      Otherwise, if S is a tuple- like type (section 3.3.3):
//          	Let N be the zero-based index of the binding element in the array binding pattern.
// 	            If S has a property with the numerical name N, T is the type of that property.
var [d1, d2] = [1, "string"];
// The type T associated with a binding element is determined as follows:
//      Otherwise, if S is a tuple- like type (section 3.3.3):
//              Otherwise, if S has a numeric index signature, T is the type of the numeric index signature.
var temp1 = [true, false, true];
var [d3, d4] = [1, "string", ...temp1];
//  Combining both forms of destructuring,
var { e:[e1, e2, e3={ b1: 1000, b4: 200 }] } = { e: [1, 2, { b1: 4, b4: 0 }] };
var { f:[f1, f2, { f3:f4, f5:f5 }, ] } = { f: [1, 2, { f3: 4, f5: 0 }] };
// When a destructuring variable declaration, binding property, or binding element specifies
// an initializer expression, the type of the initializer expression is required to be assignable
// to the widened form of the type associated with the destructuring variable declaration, binding property, or binding element.
var { g:{ g1:g1=[undefined, null] } } = { g: { g1: [1, 2] } };
var { h:{ h1:h1=[undefined, null] } } = { h: { h1: [1, 2] } };
"
`;

exports[`TSC: es6/destructuring destructuringVariableDeclaration2 1`] = `
"// @target: es2015
// The type T associated with a destructuring variable declaration is determined as follows:
//      If the declaration includes a type annotation, T is that type.
var { a1:a1, a2:a2 } = { a1: true, a2: 1 };
// Error
var [a3, [[a4]], a5] = [1, [[false]], true];
// Error
// The type T associated with a destructuring variable declaration is determined as follows:
//      Otherwise, if the declaration includes an initializer expression, T is the type of that initializer expression.
var temp = { t1: true, t2: "false" };
var [b0=3, b1=true, b2=temp] = [3, false, { t1: false, t2: 5 }];
// Error
// The type T associated with a binding element is determined as follows:
//      If the binding element is a rest element, T is an array type with
//          an element type E, where E is the type of the numeric index signature of S.
var [c1, c2, { c3:c4, c5:c5 }, , ...c6] = [1, 2, { c3: 4, c5: 0 }];
// Error
// When a destructuring variable declaration, binding property, or binding element specifies
// an initializer expression, the type of the initializer expression is required to be assignable
// to the widened form of the type associated with the destructuring variable declaration, binding property, or binding element.
var { d:{ d1:d1=["string", null] } } = { d: { d1: [1, 2] } };
// Error
"
`;

exports[`TSC: es6/destructuring destructuringVoid 1`] = `
"const {} = v;
"
`;

exports[`TSC: es6/destructuring destructuringVoidStrictNullChecks 1`] = `
"const {} = v;
"
`;

exports[`TSC: es6/destructuring destructuringWithLiteralInitializers 1`] = `
"// (arg: { x: any, y: any }) => void
function f1({ x:x, y:y }) {
}
f1({ x: 1, y: 1 });
// (arg: { x: any, y?: number }) => void
function f2({ x:x, y:y=0 }) {
}
f2({ x: 1 });
f2({ x: 1, y: 1 });
// (arg: { x?: number, y?: number }) => void
function f3({ x:x=0, y:y=0 }) {
}
f3({});
f3({ x: 1 });
f3({ y: 1 });
f3({ x: 1, y: 1 });
// (arg?: { x: number, y: number }) => void
function f4({ x:x, y:y }={ x: 0, y: 0 }) {
}
f4();
f4({ x: 1, y: 1 });
// (arg?: { x: number, y?: number }) => void
function f5({ x:x, y:y=0 }={ x: 0 }) {
}
f5();
f5({ x: 1 });
f5({ x: 1, y: 1 });
// (arg?: { x?: number, y?: number }) => void
function f6({ x:x=0, y:y=0 }={}) {
}
f6();
f6({});
f6({ x: 1 });
f6({ y: 1 });
f6({ x: 1, y: 1 });
// (arg?: { a: { x?: number, y?: number } }) => void
function f7({ a:{ x:x=0, y:y=0 } }={ a: {} }) {
}
f7();
f7({ a: {} });
f7({ a: { x: 1 } });
f7({ a: { y: 1 } });
f7({ a: { x: 1, y: 1 } });
// (arg: [any, any]) => void
function g1([x, y]) {
}
g1([1, 1]);
// (arg: [number, number]) => void
function g2([x=0, y=0]) {
}
g2([1, 1]);
// (arg?: [number, number]) => void
function g3([x, y]=[0, 0]) {
}
g3();
g3([1, 1]);
// (arg?: [number, number]) => void
function g4([x, y=0]=[0]) {
}
g4();
g4([1, 1]);
// (arg?: [number, number]) => void
function g5([x=0, y=0]=[]) {
}
g5();
g5([1, 1]);
"
`;

exports[`TSC: es6/destructuring destructuringWithLiteralInitializers2 1`] = `
"function f00([x, y]) {
}
function f01([x, y]=[]) {
}
function f02([x, y]=[1]) {
}
function f03([x, y]=[1, "foo"]) {
}
function f10([x=0, y]) {
}
function f11([x=0, y]=[]) {
}
function f12([x=0, y]=[1]) {
}
function f13([x=0, y]=[1, "foo"]) {
}
function f20([x=0, y="bar"]) {
}
function f21([x=0, y="bar"]=[]) {
}
function f22([x=0, y="bar"]=[1]) {
}
function f23([x=0, y="bar"]=[1, "foo"]) {
}
function f30([x=0, y="bar"]) {
}
function f31([x=0, y="bar"]=[]) {
}
function f32([x=0, y="bar"]=[nx]) {
}
function f33([x=0, y="bar"]=[nx, sx]) {
}
function f40([x=0, y="bar"]) {
}
function f41([x=0, y="bar"]=[]) {
}
function f42([x=0, y="bar"]=[sx]) {
}
function f43([x=0, y="bar"]=[sx, nx]) {
}
"
`;

exports[`TSC: es6/destructuring emptyArrayBindingPatternParameter01 1`] = `
"function f([]) {
	var x,y,z;
}
"
`;

exports[`TSC: es6/destructuring emptyArrayBindingPatternParameter02 1`] = `
"function f(a,[]) {
	var x,y,z;
}
"
`;

exports[`TSC: es6/destructuring emptyArrayBindingPatternParameter03 1`] = `
"function f(a,[]) {
	var x,y,z;
}
"
`;

exports[`TSC: es6/destructuring emptyArrayBindingPatternParameter04 1`] = `
"function f([]=[1, 2, 3, 4]) {
	var x,y,z;
}
"
`;

exports[`TSC: es6/destructuring emptyAssignmentPatterns01_ES5 1`] = `
"var a;
({} = a);
([] = a);
var [] = [1, 2];
"
`;

exports[`TSC: es6/destructuring emptyAssignmentPatterns01_ES5iterable 1`] = `
"var a;
({} = a);
([] = a);
"
`;

exports[`TSC: es6/destructuring emptyAssignmentPatterns01_ES6 1`] = `
"var a;
({} = a);
([] = a);
"
`;

exports[`TSC: es6/destructuring emptyAssignmentPatterns02_ES5 1`] = `
"var a;
let x,y,z,a1,a2,a3;
({} = { x, y, z } = a);
([] = [a1, a2, a3] = a);
"
`;

exports[`TSC: es6/destructuring emptyAssignmentPatterns02_ES5iterable 1`] = `
"var a;
let x,y,z,a1,a2,a3;
({} = { x, y, z } = a);
([] = [a1, a2, a3] = a);
"
`;

exports[`TSC: es6/destructuring emptyAssignmentPatterns02_ES6 1`] = `
"var a;
let x,y,z,a1,a2,a3;
({} = { x, y, z } = a);
([] = [a1, a2, a3] = a);
"
`;

exports[`TSC: es6/destructuring emptyAssignmentPatterns03_ES5 1`] = `
"var a;
({} = {} = a);
([] = [] = a);
"
`;

exports[`TSC: es6/destructuring emptyAssignmentPatterns03_ES5iterable 1`] = `
"var a;
({} = {} = a);
([] = [] = a);
"
`;

exports[`TSC: es6/destructuring emptyAssignmentPatterns03_ES6 1`] = `
"var a;
({} = {} = a);
([] = [] = a);
"
`;

exports[`TSC: es6/destructuring emptyAssignmentPatterns04_ES5 1`] = `
"var a;
let x,y,z,a1,a2,a3;
({ x, y, z } = {} = a);
([a1, a2, a3] = [] = a);
"
`;

exports[`TSC: es6/destructuring emptyAssignmentPatterns04_ES5iterable 1`] = `
"var a;
let x,y,z,a1,a2,a3;
({ x, y, z } = {} = a);
([a1, a2, a3] = [] = a);
"
`;

exports[`TSC: es6/destructuring emptyAssignmentPatterns04_ES6 1`] = `
"var a;
let x,y,z,a1,a2,a3;
({ x, y, z } = {} = a);
([a1, a2, a3] = [] = a);
"
`;

exports[`TSC: es6/destructuring emptyObjectBindingPatternParameter01 1`] = `
"function f({}) {
	var x,y,z;
}
"
`;

exports[`TSC: es6/destructuring emptyObjectBindingPatternParameter02 1`] = `
"function f(a,{}) {
	var x,y,z;
}
"
`;

exports[`TSC: es6/destructuring emptyObjectBindingPatternParameter03 1`] = `
"function f({},a) {
	var x,y,z;
}
"
`;

exports[`TSC: es6/destructuring emptyObjectBindingPatternParameter04 1`] = `
"function f({}={ a: 1, b: "2", c: true }) {
	var x,y,z;
}
"
`;

exports[`TSC: es6/destructuring emptyVariableDeclarationBindingPatterns01_ES5 1`] = `
"(function() {
	var a;
	var {} = a;
	let {} = a;
	const {} = a;
	var [] = a;
	let [] = a;
	const [] = a;
	var {} = a,[] = a;
	let {} = a,[] = a;
	const {} = a,[] = a;
	var { p1:{}, p2:[] } = a;
	let { p1:{}, p2:[] } = a;
	const { p1:{}, p2:[] } = a;
	for (var {} = {},{} = {}; false; void 0) {
	}
	function f({}=a,[]=a,{ p:{}=a }=a) {
		return ({}=a, []=a, { p:{}=a }=a) => a;
	}
})();
(function() {
	const ns = [];
	for (var {} of ns) {
	}
	for (let {} of ns) {
	}
	for (const {} of ns) {
	}
	for (var [] of ns) {
	}
	for (let [] of ns) {
	}
	for (const [] of ns) {
	}
})();
"
`;

exports[`TSC: es6/destructuring emptyVariableDeclarationBindingPatterns01_ES5iterable 1`] = `
"(function() {
	var a;
	var {} = a;
	let {} = a;
	const {} = a;
	var [] = a;
	let [] = a;
	const [] = a;
	var {} = a,[] = a;
	let {} = a,[] = a;
	const {} = a,[] = a;
	var { p1:{}, p2:[] } = a;
	let { p1:{}, p2:[] } = a;
	const { p1:{}, p2:[] } = a;
	for (var {} = {},{} = {}; false; void 0) {
	}
	function f({}=a,[]=a,{ p:{}=a }=a) {
		return ({}=a, []=a, { p:{}=a }=a) => a;
	}
})();
(function() {
	const ns = [];
	for (var {} of ns) {
	}
	for (let {} of ns) {
	}
	for (const {} of ns) {
	}
	for (var [] of ns) {
	}
	for (let [] of ns) {
	}
	for (const [] of ns) {
	}
})();
"
`;

exports[`TSC: es6/destructuring emptyVariableDeclarationBindingPatterns01_ES6 1`] = `
"(function() {
	var a;
	var {} = a;
	let {} = a;
	const {} = a;
	var [] = a;
	let [] = a;
	const [] = a;
	var {} = a,[] = a;
	let {} = a,[] = a;
	const {} = a,[] = a;
	var { p1:{}, p2:[] } = a;
	let { p1:{}, p2:[] } = a;
	const { p1:{}, p2:[] } = a;
	for (var {} = {},{} = {}; false; void 0) {
	}
	function f({}=a,[]=a,{ p:{}=a }=a) {
		return ({}=a, []=a, { p:{}=a }=a) => a;
	}
})();
(function() {
	const ns = [];
	for (var {} of ns) {
	}
	for (let {} of ns) {
	}
	for (const {} of ns) {
	}
	for (var [] of ns) {
	}
	for (let [] of ns) {
	}
	for (const [] of ns) {
	}
})();
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern1 1`] = `
"class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var [a, b] = new SymbolIterator();
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern10 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
function fun([a, b]) {
}
fun(new FooIterator());
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern11 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
function fun([a, b]=new FooIterator()) {
}
fun(new FooIterator());
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern12 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
function fun([a, ...b]=new FooIterator()) {
}
fun(new FooIterator());
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern13 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
function fun([a, ...b]) {
}
fun(new FooIterator());
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern14 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
function fun(...[a, ...b]) {
}
fun(new FooIterator());
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern15 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
function fun(...[a, b]) {
}
fun(...new FooIterator());
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern16 1`] = `
"function fun(...[a, b]) {
}
fun(...new FooIteratorIterator());
class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
class FooIteratorIterator {
	next() {
		return { value: new FooIterator(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern17 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
function fun(...[a, b]) {
}
fun(new FooIterator());
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern18 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
function fun([a, b]) {
}
fun(new FooIterator());
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern19 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooArrayIterator {
	next() {
		return { value: [new Foo()], done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
function fun([[a], b]) {
}
fun(new FooArrayIterator());
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern2 1`] = `
"class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var [a, ...b] = new SymbolIterator();
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern20 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooArrayIterator {
	next() {
		return { value: [new Foo()], done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
function fun(...[[a=new Foo()], b=[new Foo()]]) {
}
fun(...new FooArrayIterator());
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern21 1`] = `
"var [a, b] = { 0: "", 1: true };
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern22 1`] = `
"var [...a] = { 0: "", 1: true };
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern23 1`] = `
"var a,b;
[a, b] = { 0: "", 1: true };
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern24 1`] = `
"var a,b;
[a, ...b] = { 0: "", 1: true };
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern25 1`] = `
"function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]) {
}
takeFirstTwoEntries(new Map([["", 0], ["hello", 1]]));
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern26 1`] = `
"function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]) {
}
takeFirstTwoEntries(new Map([["", 0], ["hello", 1]]));
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern27 1`] = `
"function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]) {
}
takeFirstTwoEntries(...new Map([["", 0], ["hello", 1]]));
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern28 1`] = `
"function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]) {
}
takeFirstTwoEntries(...new Map([["", 0], ["hello", true]]));
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern29 1`] = `
"function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]) {
}
takeFirstTwoEntries(...new Map([["", true], ["hello", true]]));
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern3 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var a,b;
[a, b] = new FooIterator();
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern30 1`] = `
"const [[k1, v1], [k2, v2]] = new Map([["", true], ["hello", true]]);
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern4 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var a,b;
[a, ...b] = new FooIterator();
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern5 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var a,b;
[a, b] = new FooIterator();
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern6 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var a,b;
[a, ...b] = new FooIterator();
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern7 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var a,b;
[a, b] = new FooIterator();
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern8 1`] = `
"class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var a,b;
[a, ...b] = new FooIterator();
"
`;

exports[`TSC: es6/destructuring iterableArrayPattern9 1`] = `
"function fun([a, b]=new FooIterator()) {
}
class Bar {
	x;
}
class Foo extends Bar {
	y;
}
class FooIterator {
	next() {
		return { value: new Foo(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
"
`;

exports[`TSC: es6/destructuring missingAndExcessProperties 1`] = `
"// Missing properties
function f1() {
	var { x:x, y:y } = {};
	var { x:x=1, y:y } = {};
	var { x:x, y:y=1 } = {};
	var { x:x=1, y:y=1 } = {};
}
// Missing properties
function f2() {
	var x,y;
	({ x, y } = {});
	({ x:x=1, y } = {});
	({ x, y:y=1 } = {});
	({ x:x=1, y:y=1 } = {});
}
// Excess properties
function f3() {
	var {} = { x: 0, y: 0 };
	var { x:x } = { x: 0, y: 0 };
	var { y:y } = { x: 0, y: 0 };
	var { x:x, y:y } = { x: 0, y: 0 };
}
// Excess properties
function f4() {
	var x,y;
	({} = { x: 0, y: 0 });
	({ x } = { x: 0, y: 0 });
	({ y } = { x: 0, y: 0 });
	({ x, y } = { x: 0, y: 0 });
}
"
`;

exports[`TSC: es6/destructuring nonIterableRestElement1 1`] = `
"var c = {};
[...c] = ["", 0];
"
`;

exports[`TSC: es6/destructuring nonIterableRestElement2 1`] = `
"var c = {};
[...c] = ["", 0];
"
`;

exports[`TSC: es6/destructuring nonIterableRestElement3 1`] = `
"var c = { bogus: 0 };
[...c] = ["", 0];
"
`;

exports[`TSC: es6/destructuring objectBindingPatternKeywordIdentifiers05 1`] = `
"// @target: es2015
var { as:as } = { as: 1 };
"
`;

exports[`TSC: es6/destructuring objectBindingPatternKeywordIdentifiers06 1`] = `
"// @target: es2015
var { as:as } = { as: 1 };
"
`;

exports[`TSC: es6/destructuring optionalBindingParameters1 1`] = `
"// @target: es2015
function foo([x, y, z]) {
}
foo(["", 0, false]);
foo([false, 0, ""]);
"
`;

exports[`TSC: es6/destructuring optionalBindingParameters2 1`] = `
"// @target: es2015
function foo({ x:x, y:y, z:z }) {
}
foo({ x: "", y: 0, z: false });
foo({ x: false, y: 0, z: "" });
"
`;

exports[`TSC: es6/destructuring optionalBindingParameters3 1`] = `
"// @target: es2015
/**
 * @typedef Foo
 * @property {string} a
 */
/**
 * @param {Foo} [options]
 */
function f({ a:a="a" }) {
}
"
`;

exports[`TSC: es6/destructuring optionalBindingParameters4 1`] = `
"/** 
* @param {{ cause?: string }} [options] 
*/
function foo({ cause:cause }={}) {
	return cause;
}
"
`;

exports[`TSC: es6/destructuring optionalBindingParametersInOverloads1 1`] = `
"// @target: es2015
function foo(...rest) {
}
foo(["", 0, false]);
foo([false, 0, ""]);
"
`;

exports[`TSC: es6/destructuring optionalBindingParametersInOverloads2 1`] = `
"// @target: es2015
function foo(...rest) {
}
foo({ x: "", y: 0, z: false });
foo({ x: false, y: 0, z: "" });
"
`;

exports[`TSC: es6/destructuring restElementWithAssignmentPattern1 1`] = `
"var a,b;
[...[a, b=0]] = ["", 1];
"
`;

exports[`TSC: es6/destructuring restElementWithAssignmentPattern2 1`] = `
"var a,b;
[...{ 0:a="", b }] = ["", 1];
"
`;

exports[`TSC: es6/destructuring restElementWithAssignmentPattern3 1`] = `
"var a,b;
var tuple = ["", 1];
[...[a, b=0]] = tuple;
"
`;

exports[`TSC: es6/destructuring restElementWithAssignmentPattern4 1`] = `
"var a,b;
var tuple = ["", 1];
[...{ 0:a="", b }] = tuple;
"
`;

exports[`TSC: es6/destructuring restElementWithAssignmentPattern5 1`] = `
"var s,s2;
[...[s, s2]] = ["", ""];
"
`;

exports[`TSC: es6/destructuring restElementWithBindingPattern 1`] = `
"var [...[a, b]] = [0, 1];
"
`;

exports[`TSC: es6/destructuring restElementWithBindingPattern2 1`] = `
"var [...{ 0:a, b:b }] = [0, 1];
"
`;

exports[`TSC: es6/destructuring restElementWithNullInitializer 1`] = `
"function foo1([...r]=null) {
}
function foo2([...r]=undefined) {
}
function foo3([...r]={}) {
}
function foo4([...r]=[]) {
}
"
`;
